# ext

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  init-msys.sh  sample.ini  sample2.ini
.github/workflows/: cmake.yml  msys2.yml
cmake/: CPM.cmake
docs/: README.md  portability-and-contracts.md
docs/api/: README.md  any_function.md  async_result.md  base64.md  c_object.md  callback.md  cancelable_thread.md  cdbg.md  chain.md  collection.md  debug_utils.md  ini.md  lang.md  named_mutex.md  observable.md  path.md  pipe.md  process.md  property.md  pstream.md  result.md  safe_object.md  shared_mem.md  shared_recursive_mutex.md  singleton.md  stl_compat.md  string.md  thread_pool.md  type_traits.md  typeinfo.md  units.md  uri.md  version.md  wordexp.md
include/ext/: _version  any_function  async_iterator  async_result  base64  c_object.h  callback  cancelable_thread  cdbg  chain  collection  debug_utils  debug_utils.h  ini  lang  named_mutex  observable  path  pipe  process  property  pstream  result  safe_object  shared_mem  shared_recursive_mutex  singleton  stl_compat  string  thread_pool  type_traits  typeinfo  units  uri  url  version  wordexp
test/: .gitignore  CMakeLists.txt  any_function.cpp  async_iterator.cpp  async_result.cpp  base64.cpp  c_object.cpp  c_object_c.c  callback.cpp  cancelable_thread.cpp  cdbg.cpp  chain.cpp  collection.cpp  debug_utils.cpp  ini.cpp  lang.cpp  main.cpp  movable.cpp  named_mutex.cpp  observable.cpp  path.cpp  pipe.cpp  process.cpp  property.cpp  result.cpp  safe_object.cpp  shared_mem.cpp  shared_recursive_mutex.cpp  string.cpp  thread_pool.cpp  type_traits.cpp  units.cpp  uri.cpp  url.cpp  version.cpp  wordexp.cpp
